#853 Upgraded Hibernate 3.x to 4.x. Introduced SQLServer2012Dialect that supports pagination for EQL queries.